--- a/Portfolio/style.css
+++ b/Portfolio/style.css
@@ -1,1 +1,574 @@
 
+
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lemon&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lemon&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,700&display=swap');
+
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background-color: #f2fcfe;
+}
+
+body {
+  font-family: "Open Sans", sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
+p {
+  color: rgb(85, 85, 85);
+}
+
+a,
+.btn {
+  transition: all 300ms ease;
+}
+
+/* Home Section */
+
+nav,
+.nav-links {
+  display: flex;
+}
+
+nav {
+  justify-content: space-around;
+  align-items: center;
+  height: 17vh;
+}
+
+.nav-links {
+  gap: 2rem;
+  list-style: none;
+  font-size: 1.5rem;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  text-decoration-color: white;
+}
+
+a:hover {
+  color: #1c92d2;
+  text-decoration: underline;
+  text-underline-offset: 1rem;
+  text-decoration-color:#1c92d2;
+}
+
+.logo {
+  font-size: 2rem;
+  justify-content: center;
+  align-items: center;
+}
+
+.logo:hover {
+  cursor: default;
+}
+
+/* Hamburger Section */
+
+#hamburger-nav {
+  display: none;
+}
+
+.hamburger-menu {
+  position: relative;
+  display: inline-block;
+}
+
+.hamburger-icon {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 24px;
+  width: 30px;
+  cursor: pointer;
+}
+
+.hamburger-icon span {
+  width: 100%;
+  height: 2px;
+  background-color: black;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links {
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: #f2fcfe;
+  width: fit-content;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links a {
+  display: block;
+  padding: 10px;
+  text-align: center;
+  font-size: 1.5rem;
+  color: black;
+  text-decoration: none;
+  transition: all 0.3 ease-in-out;
+}
+
+.menu-links li {
+  list-style: none;
+}
+
+.menu-links.open {
+  max-height: 300px;
+}
+
+.hamburger-icon.open span:first-child {
+  transform: rotate(45deg) translate(10px, 5px);
+}
+
+.hamburger-icon.open span:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger-icon.open span:last-child {
+  transform: rotate(-45deg) translate(10px, -5px);
+}
+
+.hamburger-icon span:first-child {
+  transform: none;
+}
+
+.hamburger-icon span:first-child {
+  opacity: 1;
+}
+
+.hamburger-icon span:first-child {
+  transform: none;
+}
+
+/* Section*/
+
+section {
+  padding-top: 4vh;
+  height: 96vh;
+  margin: 0 10rem;
+  box-sizing: border-box;
+  min-height: fit-content;
+}
+
+.section-container {
+  display: flex;
+}
+
+/* Profile Section */
+
+#profile {
+  display: flex;
+  justify-content: center;
+  gap: 5rem;
+  height: 80vh;
+}
+
+.section-pic{
+  align-items: center;
+  text-align: center;
+  padding: 50px 50px;
+}
+
+.section-pic img{
+  display: flex;
+  height: 400px;
+  width: 400px;
+  margin-bottom: 15px 0; 
+  border-radius: 50% ;
+  padding: 25px 15px;
+}
+
+.section-text {
+  align-self: center;
+  text-align: center;
+}
+
+.section-text p {
+  font-weight: 600;
+}
+
+.section-text-p1 {
+  text-align: center;
+}
+
+.section-text-p2 {
+  font-size: 1.75rem;
+  margin-bottom: 1rem;
+}
+
+.title {
+  font-size: 3rem;
+  text-align: center; 
+}
+
+/* Button */
+
+.btn-container {
+  display: flex;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.btn {
+  font-weight: 600;
+  transition: all 300ms ease;
+  padding: 1rem;
+  width: 8rem;
+  border-radius: 2rem;
+  
+}
+
+.btn-color-1,
+.btn-color-2 {
+  border: rgb(53, 53, 53) 0.1rem solid;
+}
+
+.btn-color-1:hover,
+.btn-color-2:hover {
+  cursor: pointer;
+}
+
+.btn-color-1,
+.btn-color-2:hover {
+  background: #1c92d2;
+  color: #f2fcfe;
+}
+
+.btn-color-1:hover {
+  background:#1c92d2;
+}
+
+.btn-color-2 {
+  background: none;
+}
+
+.btn-color-2:hover {
+  border: rgb(255, 255, 255) 0.1rem solid;
+}
+
+.btn-container {
+  gap: 1rem;
+}
+
+/* About Section */
+
+#about{
+  color:#ababab;
+}
+
+.row{
+  display:flex;
+  justify-content: center;
+  flex-wrap:wrap;
+}
+
+.about-col-1{
+  flex: basis 35%;
+}
+
+.about-col-1 img{
+  width: 450px;
+  height:450px;
+  border-radius: 10%;
+  padding:20px;
+}
+
+.about-col-2{
+  flex-basis: 60%;
+  padding:10px;
+}
+
+.about-col-2 
+.sub-title{
+  font-size:40px;
+  font-weight:600;
+  color:black;
+}
+
+.tab-titles{
+  margin:20px 0 40px;
+  display:flex;
+}
+
+.tab-link{
+  margin-right:50px;
+  font-size:18px;
+  font-weight:500;
+  cursor:pointer;
+  position:relative;
+}
+
+.tab-link::after{
+  content:'';
+  width:0;
+  height:3px;
+  background:#100f0f;
+  position:absolute;
+  left:0;
+  bottom:-8px;
+  transition:0.3s;
+}
+
+.tab-link.active-link::after{
+  width:60%;
+}
+
+.tab-contents ul li{
+  list-style:none;
+  margin:5px 0;
+  color:#4291a2;
+}
+
+.tab-contents ul li span{
+  color:#020203;
+  font-size:14px;
+}
+
+/* Skills Section*/
+
+.details-container{
+  padding: 2rem 1rem;
+  flex:1;
+  background-color: white;
+  border-radius: 2rem;
+  border:rgb(53,53,53) 0.1rem solid;
+  border-color: rgb(163, 163, 163);
+  text-align: center;
+}
+
+#skills {
+  position: relative;
+  padding: 100px 10px;
+}
+
+.skills-sub-title {
+  color: rgb(85, 85, 85);
+  font-weight: 600;
+  font-size: 1.75rem;
+  margin-bottom: 2rem;
+  margin-top:1rem;
+  color:#000a0c;
+}
+
+.skills-details-container {
+  padding:50px;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+}
+
+.article-container {
+  display: flex;
+  text-align: initial;
+  flex-wrap: wrap;
+  flex-direction: row;
+  gap: 2rem;
+  justify-content: space-around;
+}
+
+article {
+  display: flex;
+  width: 1rem;
+  justify-content: space-around;
+  gap: 0.5rem;
+}
+
+/* Projects Section */
+
+#projects {
+    padding: 30px 0;
+}
+  
+#projects .sub-title {
+    font-size: 35px;
+}
+  
+.projects-list {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-gap: 40px;
+    margin-top: 50px;
+    margin-bottom: 60px;
+}
+  
+.projects-list div {
+    position: relative;
+    background: #c7dcf0;
+    padding: 30px;
+    font-size: 13px;
+    font-weight: 300;
+    border-radius: 35px;
+    transition: background 0.5s, transform 0.5s;
+}
+  
+.projects-list div:hover {
+    background-color:rgb(113, 180, 235);
+    transform: translateY(-10px);
+    border-radius: 30px;
+}
+  
+.projects-list div i{
+    font-size: 40px;
+    margin-bottom: 30px;
+    color: #000000;
+    background-color: #c7dcf0;
+    -webkit-background-clip: text;
+    position: relative;
+
+}
+  
+.projects-list div h2{
+    font-size: 30px;
+    font-weight: 500;
+    margin-bottom: 15px;
+    background-image: #000000;
+    -webkit-background-clip: text;
+    color: #000000;
+    position: relative; 
+    z-index: 1; 
+}
+  
+.projects-list p {
+    color: #000000;
+    background: #c7dcf0;
+    font-size: 17px;
+    position: relative;
+    -webkit-background-clip: text;
+}
+  
+.projects-list div a {
+    text-decoration: none;
+    color: #04010e;
+    font-size: 15px;
+    margin-top: 20px;
+    display: inline-block;
+    background: #c7dcf0;
+    position: relative;
+    -webkit-background-clip: text;
+}
+  
+.projects-list div i:hover {
+    background-color: linear-gradient(#74ebd5, #ACB6E5);
+    
+}
+  
+.projects-list div a:hover {
+    background-color: linear-gradient(#74ebd5, #ACB6E5); 
+}
+  
+.projects-list p:hover {
+    background-color: linear-gradient(#74ebd5, #ACB6E5);
+}
+  
+.projects-list div h2:hover {
+    background-color: linear-gradient(#74ebd5, #ACB6E5);
+    -webkit-background-clip: text;
+    color:#fff;
+}
+  
+/* Contact Section */
+
+#contact{
+  padding:100px 0;
+}
+.contact-left{
+  flex-basis:35%
+}
+
+.contact-right{
+  flex-basis:60%;
+}
+
+.contact-left p{
+  margin-top:30px;
+}
+
+.contact-left i{
+  color:#000000;
+  margin-right:15px;
+  font-size:25px;
+}
+
+.contact-right input{
+  color:#000000;
+}
+
+.social-icons{
+  margin-top:30px;
+}
+
+.social-icons a{
+  text-decoration: none;
+  font-size: 30px;
+  margin-right:5px;
+  color:#070707;
+  display:inline-block;
+  transition: transform 0.5s;
+}
+
+.social-icons a:hover{
+  color:#221ff2;
+  transform: translateY(-5px);
+}
+
+.btn.btn2{
+  display:inline-block;
+  background: #7a57ee;
+}
+
+.contact-right form{
+  width:90%;
+  color:#000000;
+}
+
+form input, form textarea{
+  width:100%;
+  border:0;
+  outline:none;
+  background:#a8caf0;
+  padding:15px;
+  margin:15px 0;
+  color:#fff;
+  font-size:18px;
+  border-radius:6px;
+}
+
+form .btn2{
+  padding:10px 35px;
+  font-size:18px;
+  margin-top:20px;
+  cursor:pointer;
+  border:#020203;
+}
+
+/* Copyright Section */
+
+.copyright{
+  color:#f2fcfe;
+  width:100%;
+  text-align:center;
+  padding: 25px  0;
+  font-weight:300;
+  margin-top:20px;
+}
+
+.copyright p{
+  color: #000a0c;
+  background:#e0e3e4
+}
+
+.copyright i{
+  color:#ff004f;
+}
+
